2006-03-16  Andreas Kupries <andreask@activestate.com>

	* generic/tclIOUtil.c (TclGetOpenMode): Added the flag O_APPEND to
	  the list of POSIX modes used when opening a file for
	  'a'ppend. This enables the proper automatic seek-to-end-on-write
	  by the OS. See [Bug 680143] for longer discussion.

	* tests/ioCmd.test (iocmd-13.7.*): Extended the testsuite to check
	  the new handling of 'a'.

2006-03-15  Andreas Kupries <andreask@activestate.com>

	* tests/socket.test: Extended the timeout in socket-11.11 from 10
	  to 40 seconds to allow for really slow machines. Also extended
	  actual/expected results with value of variable 'done' to make it
	  clearer when a test fails due to a timeout. [Bug 792159].

2006-03-15  Vince Darley  <vincentdarley@sourceforge.net>

	* win/fCmd.test: add proper test constraints so the new
	tests don't run on Unix.

2006-03-14  Andreas Kupries <andreask@activestate.com>

	* generic/tclPipe.c (TclCreatePipeline): Modified the processing
	  of pipebars to fail if the last bar is followed only by
	  redirections. [Bug 768659].

2006-03-14  Andreas Kupries <andreask@activestate.com>

	* doc/fconfigure.n: Clarified that -translation is binary is
	  reported as lf when queried, because it is identical to lf,
	  except for the special additional behaviour when setting
	  it. [Bug 666770].

2006-03-14  Andreas Kupries <andreask@activestate.com>

	* doc/clock.n: Removed double-quotes around section title NAME. not needed.
	* unix/installManpage: Reverted part to handle double-quotes in
	  section NAME, chokes older sed installations.

2006-03-14  Andreas Kupries <andreask@activestate.com>

	* library/tm.tcl (::tcl::tm::Defaults): Fixed handling of
	  environment variable TCLX.y_TM_PATH, bad variable reference. See
	  [SF Tcl Bug 1448251]. Thanks to Julian Noble.

2006-03-14  Vince Darley  <vincentdarley@sourceforge.net>

	* win/tclWinFile.c: updated patch to deal with 'file writable'
	issues on Windows XP/2000.
	* generic/tclTest.c: