@@ -1,5 +1,10 @@
 2006-03-16  Andreas Kupries <andreask@activestate.com>
 
+	* tests/io.test (io-43.1 io-44.[1234]): Rewritten to be
+	  self-contained with regard to setup and cleanup. [Bug 681793].
+
+2006-03-16  Andreas Kupries <andreask@activestate.com>
+
 	* generic/tclIOUtil.c (TclGetOpenMode): Added the flag O_APPEND to
 	  the list of POSIX modes used when opening a file for
 	  'a'ppend. This enables the proper automatic seek-to-end-on-write
